--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DATABASE_URL='sqlite:///db.sqlite'
 SMTP="smtp.mailgun.org"
 SMTP_USER="postmaster@sandboxa41dfff5ea0f45acaff1b6a2d8ce20b2.mailgun.org"
-SMTP_PASS="834602532152d46689879d8ea45acf75-c2efc90c-2db8b896"
+SMTP_PASS=
 
 API_URL="http://boleto_api"
 BROKER="amqp://guest:guest@rabbitmq_boleto:5672/"
